--- a/classes/ws2021/info2/labs/lab-05/index.html
+++ b/classes/ws2021/info2/labs/lab-05/index.html
@@ -139,6 +139,7 @@ Table of Contents
 <div class=collapse id=tocContent>
 <nav id=TableOfContents>
 <ul>
+<li><a href=#learning-goals>Learning Goals</a></li>
 <li><a href=#pre-lab>Pre-Lab</a></li>
 <li><a href=#assignment>Assignment</a>
 <ul>
@@ -151,6 +152,15 @@ Table of Contents
 </ul>
 </nav>
 </div>
+<h2 id=learning-goals>Learning Goals</h2>
+<p>After this lab you should be able to agree with each of the following statements.</p>
+<p>I can evaluate the efficiency of algorithms:</p>
+<ul>
+<li>I understand the correlation between input and running time for different program structures</li>
+<li>I can use big-o-notation to describe the running time of algorithms</li>
+<li>I can calculate the running time of algorithms by adding up running times of different structures</li>
+<li>I can compare running times based on their running time in big-o-notation</li>
+</ul>
 <h2 id=pre-lab>Pre-Lab</h2>
 <p><em><strong>P1.</strong></em> Programs A and B are analyzed and are found to have worst-case running times no greater than 150 N log N and N2, respectively. Answer the following questions, if possible:</p>
 <p>a) Which program has the better guarantee on the running time for large values of N (N > 10 000)?</p>
