--- a/classes/ws2021/networks/schedule/index.html
+++ b/classes/ws2021/networks/schedule/index.html
@@ -213,7 +213,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 28/10/2021</td>
-<td style=text-align:left>Application Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/2/>2.1-2.2, 2.7</a></td>
+<td style=text-align:left>Server Setup and the Shell</td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -229,7 +229,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 04/11/2021</td>
-<td style=text-align:left>Application Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/2/>2.3-2.6 </a></td>
+<td style=text-align:left>Application Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/2/>2.1-2.3, 2.7</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -245,7 +245,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 11/11/2021</td>
-<td style=text-align:left>Transport Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/3/>3.1-3.4</a></td>
+<td style=text-align:left>Application Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/2/>2.4-2.6</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -261,7 +261,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 18/11/2021</td>
-<td style=text-align:left>Transport Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/3/>3.5-3.8</a></td>
+<td style=text-align:left>Transport Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/3/>3.1-3.4</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -277,7 +277,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 25/11/2021</td>
-<td style=text-align:left>The Network Layer: Data Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/4/>4.1-4.2</a></td>
+<td style=text-align:left>Transport Layer: <a href=https://gaia.cs.umass.edu/kurose_ross/videos/3/>3.5-3.8</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -293,7 +293,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 02/12/2021</td>
-<td style=text-align:left>The Network Layer: Data Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/4/>4.3-4.5</a></td>
+<td style=text-align:left>The Network Layer: Data Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/4/>4.1-4.2</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -309,7 +309,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 09/12/2021</td>
-<td style=text-align:left>The Network Layer: Control Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/5/>5.1-5.4</a></td>
+<td style=text-align:left>The Network Layer: Data Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/4/>4.3-4.5</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -325,7 +325,7 @@ Table of Contents
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 <td style=text-align:left>Thu 16/12/2021</td>
-<td style=text-align:left>The Network Layer: Control Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/5/>5.5-5.7</a></td>
+<td style=text-align:left>The Network Layer: Control Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/5/>5.1-5.4</a></td>
 <td style=text-align:left></td>
 <td style=text-align:left></td>
 </tr>
@@ -365,7 +365,7 @@ Table of Contents
 <td style=text-align:left>13</td>
 <td style=text-align:left>1</td>
 <td style=text-align:left>Wed 05/01/2022</td>
-<td style=text-align:left></td>
+<td style=text-align:left>The Network Layer: Control Plane <a href=https://gaia.cs.umass.edu/kurose_ross/videos/5/>5.5-5.7</a></td>
 <td style=text-align:left>5</td>
 <td style=text-align:left></td>
 </tr>
